k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yoda-translator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yoda-translator
  namespace: yoda-translator
  labels:
    app: yoda-translator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yoda-translator
  template:
    metadata:
      labels:
        app: yoda-translator
    spec:
      containers:
        - name: app
          image: quay.io/mprahl/ibm-techxchange:latest
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: yoda-translator
  namespace: yoda-translator
  labels:
    app: yoda-translator
spec:
  selector:
    app: yoda-translator
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: yoda-translator
  namespace: yoda-translator
spec:
  to:
    kind: Service
    name: yoda-translator
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
