k8s/kserve.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: yoda-predictor
  namespace: kubeflow-user-example-com
spec:
  path: /
  to:
    name: yoda-llm-predictor
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: yoda-llm-predictor
